--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <main>
             <section class="principal">
 
-                <h2 class="titulo-principal">Sobre la Barbería Alura</h2>
+                <h2 class="titulo-principal">encriptador</h2>
 
                 <img class="utensilios"  src="imagenes/utensilios.jpg.jpg" alt="Utensilios de un barbero">
     
