--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Encriptador</title>
 </head>
 <body>
-    
+    <header>
+        <img class="logo" src="imagenes/Frame 6.png" alt="logo de alura" >
+    </header>
+    <main>
+        <section>
+            <textarea class= "text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <div>
+                <h6 class="Informacion">Solo letras minúsculas y sin acentos</h6>
+            </div>
+        </section>
+        <section></section>
+
+    </main>
 </body>
 </html>
