Codigo encriptando anexa archivo .js

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         </section>
         <section> 
              <div>
-                <textarea name="texto_resultado" class="text-area1"cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+                <textarea name="texto_resultado" class="mensaje"cols="20" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             </div>   
         </section>
 
     </main>
+<script src="script.js"></script>
 </body>
 </html>
