Actualizado .JS solo  minusculas sin caracteres

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
         </section>
         <section> 
              <div>
-                <textarea name="texto_resultado" class="mensaje"cols="20" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+                <textarea name="texto_resultado" class="mensaje"cols="20" rows="10" placeholder="Ningun texto fue encontrado"></textarea>
             </div>   
         </section>
 
     </main>
+    <footer>
+        <p class="copyright">Jose Moreno - 2023</p>
+    </footer>
 <script src="script.js"></script>
 </body>
 </html>
